--- a/mobile.css
+++ b/mobile.css
@@ -5,12 +5,20 @@
            
            overflow-x: hidden;
     }
-    #whatsfixo{
+    #fixowhats1{
         position: fixed;
-        left:300px;
-        top:500px;
-        height:70px;
-        width:70px;
+        transform: translateX(-50px) translateY(350px) scale(0.08);
+        display: flex;
+        z-index: 1;
+    }
+    #whatsfixo{
+        display:none;
+    }
+   
+    #menuwhats{
+        position: fixed;
+        left:500px;
+        top:-180px;
     }
     .menu,.contato{
         display: none;
@@ -301,18 +309,49 @@
     }
     #fundonatal{
         position: relative;
-        top:-100px;
+        top:-180px;
         left:1px;
         width:200px;
     }
-    #mobilenovo{
-        position: relative;
-        top:-20px;
-        left:0px;
-        width:100px;
-        height:500px;
-        display: flex;
-    }
+
+      #novo{
+        position:relative;
+        height:700px;
+        width:400px;
+        transform: translateX(5px);
+      }
+      #novo:hover{
+        box-shadow: 50px 15px 20px #043fbe;
+        text-decoration: dashed;
+      
+        transition: .6s;
+      }
+      #carnaval{
+        position:relative;
+        height:700px;
+        width:400px;
+        transform: translateX(5px);
+      }
+        #carnaval:hover{
+        box-shadow: 20px 15px 50px #7404be;
+        text-decoration: dashed;
+    
+        transition: .6s;
+      }
+      #janeiro{
+        position:relative;
+        height:700px;
+        width:400px;
+        transform: translateX(5px);
+      }
+      #janeiro:hover{
+        box-shadow: 20px 15px 50px #004ef7;
+        text-decoration: dashed;
+    
+        transition: .6s;
+      }
+
+
     video{
         position: relative;
         top:-280px;
@@ -323,9 +362,10 @@
 
     #mapafinal{
         position: relative;
-        top:-100px;
+        top:-2800px;
         height:3600px;
     }
+
     iframe{
         position: relative;
         left:65px;
