--- a/projeto01.css
+++ b/projeto01.css
@@ -1080,40 +1080,19 @@ section{
     opacity: .8;
 
     }
-  #novo{
-    position:relative;
-    height:700px;
-    width:450px;
-    transform: translateX(40px);
-  }
-  #novo:hover{
-    box-shadow: 50px 15px 20px #043fbe;
-    text-decoration: dashed;
-  
-    transition: .6s;
-  }
-  #carnaval{
-    position:relative;
-    height:700px;
-    width:450px;
-    transform: translateX(40px);
-  }
-    #carnaval:hover{
-    box-shadow: 20px 15px 50px #7404be;
-    text-decoration: dashed;
 
-    transition: .6s;
-  }
   #janeiro{
-    position:relative;
+  display: none;
+  }
+  #janeiro2{
+    position: relative;
     height:700px;
-    width:450px;
+    width:1350px;
     transform: translateX(40px);
   }
   #janeiro:hover{
     box-shadow: 20px 15px 50px #004ef7;
     text-decoration: dashed;
-
     transition: .6s;
   }
 
