--- a/css/maingalery.css
+++ b/css/maingalery.css
@@ -77,20 +77,14 @@ main{
 
 
 /*CARROSSEL*/
-.sectdois-bloc{
-    display: flex;
-    flex-wrap: wrap;
-    width: 50%;
 
-    padding-top: 40px;
-    
-}
 .fundo-blocdois{
     display: block;
     flex-wrap: wrap;
     width: 100%;
     height: 50%;
 }
+/*bloco das imagens*/
 #blocdois-planum, 
 #blocdois-plandois, 
 #blocdois-plantres{
@@ -124,12 +118,15 @@ main{
     justify-content: center;
     align-items: center;
 }
+/*tamanho das imagens*/
 #img-plabloc{
     height: 300px;
     width: 300px;
 }
 
-/*SISTEMA DO CARROSSEL*/
+
+
+/*fundo configuração do carrossel*/
 .fundo-blocdoissistema{
     display: flex;
     justify-content:space-evenly;
@@ -138,14 +135,18 @@ main{
     width: 100%;
     padding-top: 100px;
 }
-#icons-setblocodoisvoltar{
-    font-size: 50px;
-    color: white;
-}
+/*seta para ir*/
 #icons-setblocodoisir{
     font-size: 50px;
     color: white;
 }
+/*seta para voltar*/
+#icons-setblocodoisvoltar{
+    font-size: 50px;
+    color: white;
+}
+
+
 #fundo-sistemtitulo{
     display: flex;
     justify-content: center;
@@ -154,6 +155,7 @@ main{
     font-size: 25px;
     color: white;
 }
+
 #bolinha-sistema{
     color: rgba(255, 255, 255, 0.33);
 
@@ -165,7 +167,6 @@ main{
 
 
 /*SEÇAO GALERIA*/
-
 .sect-galeriaimagens{
     display: flex;
     flex-wrap: wrap;
@@ -175,11 +176,14 @@ main{
     height:800px;
     color: white;
 }
+
+
+
 .sect-categoria{
     display: flex;
     align-items: center;
     justify-content:center;
-    width: 90%;
+    width: 85%;
     height: 9%;
     background-color: #175ED4;
     padding-left: 10px;
@@ -202,8 +206,36 @@ main{
     padding: 10px;
     font-size: 20px;
     border-left: 2px solid #0D3371;
+    cursor: pointer;
+}
+#categoria-galeria:active{
+    background-color: #0D3371;
+}
+#categoria-galeria:hover{
+    background-color: #0D3371;
 }
 
+
+
+.fechar-categoria{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 6%;
+    height: 9%;
+    background-color: #175ED4;
+    z-index: 2;
+
+}
+.fechar-categoria:hover{
+    background-color: #0D3371;
+    color: white;
+    cursor: pointer;
+}
+#icon-fecharcategoria{
+    font-size: 22px;
+    cursor: pointer;
+}
 
 
 
@@ -241,7 +273,6 @@ main{
     display: flex;
     flex-wrap: wrap;
     width: 100%; 
-
     margin-top: -170px;   
 }
 #list-informaçoes{
@@ -254,8 +285,74 @@ main{
     flex-wrap: wrap;
     width: 100%;
     overflow-y: scroll;
-
 }
+
+
+.fundo-todas{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.fundo-casa{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.fundo-garagem{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.fundo-quartos{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.fundo-banheiros{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
+.fundo-bairro{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.fundo-churrasco{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.fundo-jogos{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.fundo-piscina{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
 
 #img-infor{
     width: 200px;
