--- a/mob/mobheader.css
+++ b/mob/mobheader.css
@@ -29,20 +29,23 @@ body,html{
 
 
 /*CONFIGURAÇÕES DO MENU*/
-#fundo-menu{
-    display: none ;
+.fundo-menu{
+    display: flex;
     position: absolute;      
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-    height: 1000px;
+    height: 800px;
     width: 100%;
-    transform: translateX(0px);
-    background-color: #175ED4;
+    transform: translateX(5000px);
+    background-color: #002257d7;
     padding: 20px;
     z-index: 4;
     margin-left: -20px;  
     overflow: auto;     
     transition: 1s  ;
+}
+.ativar-menumob{
+    transform: translateX(0px);
 }
 
 
@@ -52,10 +55,12 @@ body,html{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    position: fixed;
+    width: 80%;
     height: 5%;
     padding: 10px;
     font-size: 28px;
+    color: white;
 }
 
 #icon-fecharmenu{
@@ -64,13 +69,7 @@ body,html{
 
 
 /*ROLAGEM DO MENU*/
-.rolagem-menumob{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-}
+
 
 
 
@@ -83,29 +82,40 @@ body,html{
     flex-wrap: wrap;
     width: 100%;
     padding: 10px;
-    height: 60%;
+    z-index: 4;
+    height: 50%;
+    margin-top: 90px;
     border-bottom: 2px solid #175ED4;
-}
-#redes-menumob{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid #175ED4;
-    width: 100%;
-    margin-top: -0px;
-    padding: 20px;
-    font-size: 21px;
 }
 
-.botao-menumob{
+#mob-dadosnav{
+    width: 100%;
+    margin-top:0px ;
+    background-color: #175ED4;
+    font-size: 21px;
+    padding: 10px;
+    color: white;
+    border-bottom: 2px solid #175ED4;
+}
+#mob-dadosnav:hover{
+    background-color: #002257d7;
+}
+
+#btn-mobmenu{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 90%;
+    height: 5%;
     background-color: #175ED4;
+    margin-top: -120px;
     color: white;
-    width: 100%;
-    padding: 20px;
     font-size: 21px;
+    padding: 10px;
+}
+
+#btn-mobmenu:hover{
+    background-color: #002257d7;
 }
 
 /*DIVISÃO MENU 2*/
