--- a/css/sectiondesk.css
+++ b/css/sectiondesk.css
@@ -389,20 +389,9 @@
 #input-number::placeholder{
     color: white;
 }
-#input-serviço{
-    width: 40%;
-    font-size:20px;
-    background-color: #175ED4;
-    color: white;
-    border: 0px;
-    border-bottom: 2px solid white;
-    padding:10px;
-}
-#input-serviço::placeholder{
-    color: white;
-}
+
 #input-pessoas{
-    width: 40%;
+    width: 90%;
     font-size:20px;
     background-color: #175ED4;
     color: white;
@@ -437,6 +426,7 @@
 #input-saida::placeholder{
     color: white;
 }
+
 #btn-enviarcadastro{
     width: 80%;
     font-size:20px;
@@ -444,6 +434,12 @@
     color: white;
     border: 2px solid white;
     padding:10px;
+    cursor: pointer;
+}
+#btn-enviarcadastro:hover{
+    background-color:white;
+    color: #175ED4;
+    border: 2px solid #0D3371;
 }
 
 
@@ -574,9 +570,12 @@
 #img-sitio{
     width: 150px;
     height: 150px;
+    cursor: pointer;
     margin-left: 10px;
     border: 1px solid rgba(0, 0, 0, 0.41);
 }
+
+
 
 
 
@@ -666,18 +665,29 @@
     align-items: center;
     width: 100%;
 }
-
-#adicionarimg-comentario{
-    width: 150px;
-    height: 150px;
-    border: 1px solid rgba(0, 0, 0, 0.41);
+input[type="file"]{
+    display: none;
 }
+.adicionarimg-comentario{
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    background-color: #175ED4;
+    color: white;
+    padding: 10px;
+}
+.adicionarimg-comentario:focus{
+    background-color: green;
+}
+
 
 
 #btn-enviarcomentario{
     display:flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 
     width: 40%;
     height: 9%;
@@ -687,6 +697,10 @@
 
     border: 0;
     border-radius: 40px;
+}
+
+#btn-enviarcomentario:hover{
+    background-color: #0D3371;
 }
 
 
