--- a/mob/section.css
+++ b/mob/section.css
@@ -151,14 +151,13 @@
 }
 #back-form{
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 .fundo-tituloformulario{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-
     margin-top: -30px;
 
 }
@@ -167,6 +166,7 @@
     text-align: center;
     margin-top: -20px;
 }
+
 /*CONFIGURAÇÃO DOS INPUT*/
 #input-nome{
     margin-top: -30px;
@@ -176,6 +176,7 @@
     color: white;
     font-size: 17px;
 }
+
 #input-email{
     width: 100%;
 }
@@ -183,14 +184,24 @@
     color: white;
     font-size: 17px;
 }
+
+#input-number{
+    width: 100%;
+}
 #input-number::placeholder{
     color: white;
     font-size: 17px;
+}
+
+#input-serviços{
+    width: 100%;
 }
 #input-serviço::placeholder{
     color: white;
     font-size: 17px;
 }
+
+
 #input-pessoas{
     width: 100%;
 }
@@ -198,8 +209,10 @@
     color: white;
     font-size: 17px;
 }
+
+
 #input-entrada{
-    width: 30%;
+    width: 100%;
     font-size:20px;
     background-color: #175ED4;
     color: white;
@@ -210,8 +223,10 @@
 #input-entrada::placeholder{
     color: white;
 }
+
+
 #input-saida{
-    width: 30%;
+    width: 100%;
     font-size:20px;
     background-color: #175ED4;
     color: white;
@@ -222,6 +237,8 @@
 #input-saida::placeholder{
     color: white;
 }
+
+
 #btn-enviarcadastro{
     width: 80%;
     font-size:20px;
@@ -233,46 +250,68 @@
 
 .sect-tres{
     display: flex;
-    justify-content: center;
     width: 100%;
-    height: 1100px;
+    height: 1450px;
     padding: 10px;
 }
 #secttres-titulo{
-    margin-top: -30px;
     font-size: 22px;
+
 }
+/*Configuração de rolagem do bloco de comentarios*/
 .post-comentario{
     display: flex;
-    justify-content: center;
-    align-items: center;
     width: 95%;
-    height: 400px;
-
+    height:600px;
     padding: 0;
     margin-left: -20px;
 }
+/*Configuração do bloco de comentarios*/
+#bloco-comentario{
+    display: flex;
+    width: 100%;
+    height: 500px;
+}
+/*Bloco comentarios- parte um*/
+#bloco-partum{
+    justify-content: space-evenly;
+}
+
+
 
 #bloco-partres{
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding: 0;
     margin: 0;
     width: 100%;
-    height: 60%;
+    height:40%;
+    overflow-x: scroll;
 }
 #img-sitio{
-    height:50%;
-    width: 40%;
+    height:160px;
+    width: 130px;
 }
+/*Configuração do bloco de inserir comentario*/
 .add-comentario{
-    width: 95%;
+    width: 100%;
     height: 600px;
+    display: flex;
+    align-items: center;
+    margin-left: -20px;
+    z-index: 4;
+    padding: 20px;
+
+}
+/*inserir comentario - titulo comentario*/
+#titulo-comentario{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: -20px;
+    font-size: 26px;
 }
+
 .img-adicionarcomentario{
     display: flex;
     justify-content: space-between;
@@ -292,7 +331,7 @@
 
 #btn-enviarcomentario{
     width: 80%;
-    margin-top: -40px;
+    margin-top: -80px;
     padding: 10px;
 }
 
