--- a/mob/galeriamob.css
+++ b/mob/galeriamob.css
@@ -43,10 +43,14 @@
     display: flex;
     justify-content: left;
     width: 90%;
-    height: 15%;
+    height: 6%;
+    padding: 10px;
     overflow-x: scroll;
     overflow-y: hidden;
     margin-top: 0px;
+    border-left: 2px solid #175ED4; 
+    border-right: 2px solid #175ED4;
+    border-bottom: 2px solid #175ED4;
 }
 
 #categoria-galeriageral{
@@ -75,7 +79,7 @@
     height: 150px;
 }
 .sect-informaçao{
-    margin-top: -190px;
+    transform: translateY(-80px);
     border: 0;
     border-left: 2px solid #175ED4; 
     border-right: 2px solid #175ED4;
