--- a/mob/galeriamob.css
+++ b/mob/galeriamob.css
@@ -45,6 +45,7 @@
     width: 90%;
     height: 6%;
     padding: 10px;
+    z-index: 2;
     overflow-x: scroll;
     overflow-y: hidden;
     margin-top: 0px;
@@ -79,7 +80,7 @@
     height: 150px;
 }
 .sect-informaçao{
-    transform: translateY(-80px);
+    transform: translateY(-40px);
     border: 0;
     border-left: 2px solid #175ED4; 
     border-right: 2px solid #175ED4;
