--- a/css/obrigado.css
+++ b/css/obrigado.css
@@ -56,7 +56,7 @@ main{
     padding: 10px;
 }
 #icons-redesdesk{
-    font-size: 19px;
+    font-size: 30px;
     color: white;
 }
 
@@ -100,4 +100,6 @@ main{
     justify-content: center;
     width: 100%;
     margin-top: -110px;
+    text-align: center;
+    font-size: 25px;
 }
