--- a/mob/section.css
+++ b/mob/section.css
@@ -333,7 +333,7 @@
 /*Configuração do bloco de inserir comentario*/
 
 .fundo-addcomentarios{
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
