--- a/css/galeria.css
+++ b/css/galeria.css
@@ -231,7 +231,7 @@ main{
 
 /*Galeria - opções de menu*/
 #categoria-garagem{
-    display: flex;
+    display: none;
     justify-content: center;
     width: 40%;
     color: white;
@@ -294,7 +294,7 @@ main{
 
 /*Galeria - opções de menu*/
 #categoria-bairro{
-    display: flex;
+    display: none;
     justify-content: center;
     width: 40%;
     color: white;
@@ -470,8 +470,8 @@ main{
     display: none;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
     width: 100%;
+    height: 20%;
 }
 
 /*Galeria - banheiro*/
@@ -546,7 +546,7 @@ main{
 
 /*APARECER IMAGEM - FUNDO APARECER IMAGEM*/
 .fundo-imagemdestaque{
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     width: 100%;
